--- a/Homework_01/Homework_01.vcxproj
+++ b/Homework_01/Homework_01.vcxproj
@@ -148,6 +148,9 @@
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
