--- a/Homework_02/Homework_02.vcxproj
+++ b/Homework_02/Homework_02.vcxproj
@@ -142,6 +142,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Coin.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Coin.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
