--- a/Homework_10/Homework_10.vcxproj.filters
+++ b/Homework_10/Homework_10.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="MyString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StudentTestScores.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="TestScore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
