--- a/Homework_10/Homework_10.vcxproj.filters
+++ b/Homework_10/Homework_10.vcxproj.filters
@@ -26,8 +26,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestScore.cpp">
+    <ClCompile Include="StudentTestScore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
