--- a/Homework_10/Homework_10.vcxproj.filters
+++ b/Homework_10/Homework_10.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClInclude Include="StudentTestScores.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StudentList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="StudentTestScore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StudentList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
