--- a/Homework_04/Homework_04.vcxproj
+++ b/Homework_04/Homework_04.vcxproj
@@ -142,6 +142,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="RetailItem.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ReadMe.txt" />
+    <ClCompile Include="RetailItem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
