--- a/WriteTextFile/WriteTextFile.vcxproj.filters
+++ b/WriteTextFile/WriteTextFile.vcxproj.filters
@@ -24,10 +24,10 @@
     <ClCompile Include="StudentPhone.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StudentList.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="Student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -41,7 +41,10 @@
     <ClInclude Include="TestScore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="StudentList.h">
+    <ClInclude Include="MyString.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Student.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
