--- a/Exam_02/Exam_02.vcxproj.filters
+++ b/Exam_02/Exam_02.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="TestScore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source Files\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyString.h">
