--- a/Homework_04/Homework_04.vcxproj.filters
+++ b/Homework_04/Homework_04.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="ReadMe.txt">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
